[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Fredrik Bergenlid <fredrik.bergenlid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recap = "0.1"
serde = { version = "1.0", features = ["derive"] }


