[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recap = "0.1"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.1"
hashbrown = "0.11"

[profile.release]
debug = true

